navbar width=97.2vw, no horizontal scrolling fixed

--- a/css/css.css
+++ b/css/css.css
@@ -34,7 +34,7 @@ body {
 /*		navbar start	*/
 .navbar {
 	padding: 10px;
-	width: 100vw;
+	width: 97.2vw;
 	color: black;
 	background-color: beige;
 
